--- a/src/index.css
+++ b/src/index.css
@@ -164,7 +164,7 @@ body.dark-theme {
   border-radius: 50%;
   overflow: hidden;
   display: flex;
-  align-items: flex;
+  align-items: flex-end;
   justify-content: center;
 }
 
@@ -321,6 +321,7 @@ body.dark-theme {
   width: 100%;
   height: 100%;
 }
+
 
 .projects__modal {
   position: absolute;
